Closed Bug 1024248 Opened 11 years ago Closed 11 years ago

Properly tag linker error/warnings in logcat

Categories

(Core :: mozglue, defect)

All
Android
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla33

People

(Reporter: glandium, Assigned: glandium)

References

Details

Attachments

(1 file)

No description provided.
Assignee: nobody → mh+mozilla
Status: NEW → ASSIGNED
Attachment #8438835 - Flags: review?(nfroyd) → review+
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla33
Just found this in a passing run: 00:17:09 INFO - 07-08 00:15:08.203 E/GeckoLinker( 4438): /data/data/com.adobe.flashplayer/lib/libysshared.so: Text relocations are not supported Android 4.0 Panda mozilla-central talos remote-tspaint on 2014-07-08 01:50:21 PDT for push c45f6e6d6005 https://tbpl.mozilla.org/php/getParsedLog.php?id=43332018&full=1&branch=mozilla-central Should the run have not been passing, or is this a failure that should have been a warning rather than an error? (Just worried about false positives if bug 1017578 lands). Cheers :-)
Flags: needinfo?(mh+mozilla)
Depends on: 1037344
(In reply to Ed Morley (Away 12th-20th July) from comment #4) > Just found this in a passing run: > 00:17:09 INFO - 07-08 00:15:08.203 E/GeckoLinker( 4438): > /data/data/com.adobe.flashplayer/lib/libysshared.so: Text relocations are > not supported > Android 4.0 Panda mozilla-central talos remote-tspaint on 2014-07-08 > 01:50:21 PDT for push c45f6e6d6005 > https://tbpl.mozilla.org/php/getParsedLog. > php?id=43332018&full=1&branch=mozilla-central > > Should the run have not been passing, or is this a failure that should have > been a warning rather than an error? (Just worried about false positives if > bug 1017578 lands). Cheers :-) Broken out to bug 1037344.
Flags: needinfo?(mh+mozilla)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: