Bug 1024248 - Properly tag linker error/warnings in logcat. r=nfroyd