mozglue/linker/CustomElf.cpp
@@ -149,14 +149,14 @@ CustomElf::Load(Mappable *mappable, const char *path, int flags)
         if (!dyn) {
           dyn = phdr;
         } else {
-          LOG("%s: Multiple PT_DYNAMIC segments detected", elf->GetPath());
+          ERROR("%s: Multiple PT_DYNAMIC segments detected", elf->GetPath());
           return nullptr;
         }
         break;
       case PT_TLS:
         debug_phdr("PT_TLS", phdr);
         if (phdr->p_memsz) {
-          LOG("%s: TLS is not supported", elf->GetPath());
+          ERROR("%s: TLS is not supported", elf->GetPath());
           return nullptr;
         }
         break;
@@ -165,7 +165,7 @@ CustomElf::Load(Mappable *mappable, const char *path, int flags)
 // Skip on Android until bug 706116 is fixed
 #ifndef ANDROID
         if (phdr->p_flags & PF_X) {
-          LOG("%s: Executable stack is not supported", elf->GetPath());
+          ERROR("%s: Executable stack is not supported", elf->GetPath());
           return nullptr;
         }
 #endif
@@ -178,18 +178,18 @@ CustomElf::Load(Mappable *mappable, const char *path, int flags)
         break;
 #endif
       default:
-        DEBUG_LOG("%s: Warning: program header type #%d not handled",
+        DEBUG_LOG("%s: Program header type #%d not handled",
                   elf->GetPath(), phdr->p_type);
     }
   }
 
   if (min_vaddr != 0) {
-    LOG("%s: Unsupported minimal virtual address: 0x%08" PRIxAddr,
+    ERROR("%s: Unsupported minimal virtual address: 0x%08" PRIxAddr,
         elf->GetPath(), min_vaddr);
     return nullptr;
   }
   if (!dyn) {
-    LOG("%s: No PT_DYNAMIC segment found", elf->GetPath());
+    ERROR("%s: No PT_DYNAMIC segment found", elf->GetPath());
     return nullptr;
   }
 
@@ -208,7 +208,7 @@ CustomElf::Load(Mappable *mappable, const char *path, int flags)
   if ((elf->base == MAP_FAILED) ||
       (mmap(elf->base, max_vaddr, PROT_NONE,
             MAP_PRIVATE | MAP_ANONYMOUS | MAP_FIXED, -1, 0) != elf->base)) {
-    LOG("%s: Failed to mmap", elf->GetPath());
+    ERROR("%s: Failed to mmap", elf->GetPath());
     return nullptr;
   }
 
@@ -482,9 +482,9 @@ CustomElf::LoadSegment(const Phdr *pt_load) const
 
   if (mapped != where) {
     if (mapped == MAP_FAILED) {
-      LOG("%s: Failed to mmap", GetPath());
+      ERROR("%s: Failed to mmap", GetPath());
     } else {
-      LOG("%s: Didn't map at the expected location (wanted: %p, got: %p)",
+      ERROR("%s: Didn't map at the expected location (wanted: %p, got: %p)",
           GetPath(), where, mapped);
     }
     return false;
@@ -520,7 +520,7 @@ CustomElf::LoadSegment(const Phdr *pt_load) const
     }
     if (mem_end > next_page) {
       if (mprotect(GetPtr(next_page), mem_end - next_page, prot) < 0) {
-        LOG("%s: Failed to mprotect", GetPath());
+        ERROR("%s: Failed to mprotect", GetPath());
         return false;
       }
     }
@@ -571,7 +571,7 @@ CustomElf::InitDyn(const Phdr *pt_dyn)
       case DT_SYMENT:
         debug_dyn("DT_SYMENT", dyn);
         if (dyn->d_un.d_val != sizeof(Sym)) {
-          LOG("%s: Unsupported DT_SYMENT", GetPath());
+          ERROR("%s: Unsupported DT_SYMENT", GetPath());
           return false;
         }
         break;
@@ -579,7 +579,7 @@ CustomElf::InitDyn(const Phdr *pt_dyn)
         if (strcmp("libflashplayer.so", GetName()) == 0) {
           has_text_relocs = true;
         } else {
-          LOG("%s: Text relocations are not supported", GetPath());
+          ERROR("%s: Text relocations are not supported", GetPath());
           return false;
         }
         break;
@@ -589,7 +589,7 @@ CustomElf::InitDyn(const Phdr *pt_dyn)
       case UNSUPPORTED_RELOC():
       case UNSUPPORTED_RELOC(SZ):
       case UNSUPPORTED_RELOC(ENT):
-        LOG("%s: Unsupported relocations", GetPath());
+        ERROR("%s: Unsupported relocations", GetPath());
         return false;
       case RELOC():
         debug_dyn(STR_RELOC(), dyn);
@@ -602,7 +602,7 @@ CustomElf::InitDyn(const Phdr *pt_dyn)
       case RELOC(ENT):
         debug_dyn(STR_RELOC(ENT), dyn);
         if (dyn->d_un.d_val != sizeof(Reloc)) {
-          LOG("%s: Unsupported DT_RELENT", GetPath());
+          ERROR("%s: Unsupported DT_RELENT", GetPath());
           return false;
         }
         break;
@@ -643,7 +643,7 @@ CustomElf::InitDyn(const Phdr *pt_dyn)
         break;
       case DT_PLTREL:
         if (dyn->d_un.d_val != RELOC()) {
-          LOG("%s: Error: DT_PLTREL is not " STR_RELOC(), GetPath());
+          ERROR("%s: Error: DT_PLTREL is not " STR_RELOC(), GetPath());
           return false;
         }
         break;
@@ -655,14 +655,14 @@ CustomElf::InitDyn(const Phdr *pt_dyn)
              if (strcmp("libflashplayer.so", GetName()) == 0) {
                has_text_relocs = true;
              } else {
-               LOG("%s: Text relocations are not supported", GetPath());
+               ERROR("%s: Text relocations are not supported", GetPath());
                return false;
              }
            }
            /* we can treat this like having a DT_SYMBOLIC tag */
            flags &= ~DF_SYMBOLIC;
            if (flags)
-             LOG("%s: Warning: unhandled flags #%" PRIxAddr" not handled",
+             WARN("%s: unhandled flags #%" PRIxAddr" not handled",
                  GetPath(), flags);
         }
         break;
@@ -685,21 +685,21 @@ CustomElf::InitDyn(const Phdr *pt_dyn)
         /* Ignored */
         break;
       default:
-        LOG("%s: Warning: dynamic header type #%" PRIxAddr" not handled",
+        WARN("%s: dynamic header type #%" PRIxAddr" not handled",
             GetPath(), dyn->d_tag);
     }
   }
 
   if (!buckets || !symnum) {
-    LOG("%s: Missing or broken DT_HASH", GetPath());
+    ERROR("%s: Missing or broken DT_HASH", GetPath());
     return false;
   }
   if (!strtab) {
-    LOG("%s: Missing DT_STRTAB", GetPath());
+    ERROR("%s: Missing DT_STRTAB", GetPath());
     return false;
   }
   if (!symtab) {
-    LOG("%s: Missing DT_SYMTAB", GetPath());
+    ERROR("%s: Missing DT_SYMTAB", GetPath());
     return false;
   }
 
@@ -746,7 +746,7 @@ CustomElf::Relocate()
     }
 
     if (symptr == nullptr)
-      LOG("%s: Warning: relocation to NULL @0x%08" PRIxAddr,
+      WARN("%s: Relocation to NULL @0x%08" PRIxAddr,
           GetPath(), rel->r_offset);
 
     /* Apply relocation */
@@ -760,7 +760,7 @@ CustomElf::Relocate()
       *(const char **) ptr = (const char *)symptr + rel->GetAddend(base);
       break;
     default:
-      LOG("%s: Unsupported relocation type: 0x%" PRIxAddr,
+      ERROR("%s: Unsupported relocation type: 0x%" PRIxAddr,
           GetPath(), ELF_R_TYPE(rel->r_info));
       return false;
     }
@@ -779,7 +779,7 @@ CustomElf::RelocateJumps()
 
     /* Only R_*_JMP_SLOT relocations are expected */
     if (ELF_R_TYPE(rel->r_info) != R_JMP_SLOT) {
-      LOG("%s: Jump relocation type mismatch", GetPath());
+      ERROR("%s: Jump relocation type mismatch", GetPath());
       return false;
     }
 
@@ -792,12 +792,16 @@ CustomElf::RelocateJumps()
       symptr = GetSymbolPtrInDeps(strtab.GetStringAt(sym.st_name));
 
     if (symptr == nullptr) {
-      LOG("%s: %s: relocation to NULL @0x%08" PRIxAddr " for symbol \"%s\"",
-          GetPath(),
-          (ELF_ST_BIND(sym.st_info) == STB_WEAK) ? "Warning" : "Error",
-          rel->r_offset, strtab.GetStringAt(sym.st_name));
-      if (ELF_ST_BIND(sym.st_info) != STB_WEAK)
+      if (ELF_ST_BIND(sym.st_info) == STB_WEAK) {
+        WARN("%s: Relocation to NULL @0x%08" PRIxAddr " for symbol \"%s\"",
+            GetPath(),
+            rel->r_offset, strtab.GetStringAt(sym.st_name));
+      } else {
+        ERROR("%s: Relocation to NULL @0x%08" PRIxAddr " for symbol \"%s\"",
+            GetPath(),
+            rel->r_offset, strtab.GetStringAt(sym.st_name));
         return false;
+      }
     }
     /* Apply relocation */
     *(void **) ptr = symptr;
